# llm

./: .pre-commit-config.yaml  DockerFile  README.md  docker-compose.yml  logging_config.yaml  pyproject.toml
llm_api/: Dockerfile  logging_config.yaml  pyproject.toml
llm_api/api/: router.py  views.py
llm_api/api/middlewares/: api_key_middleware.py
llm_api/api/v1/: schemas.py  views.py
llm_api/app/: application.py  run_app.py  settings.py
llm_api/clients/: openai_async_client.py  openai_client.py
llm_api/clients/llm_clients/: openai_async_client.py
llm_api/clients/news_api_clients/: the_news_api_client.py
llm_api/factories/: llm_client_factory.py
llm_api/factories/llm_factories/: llm_client_factory.py
llm_api/factories/news_api_factories/: news_api_client_factory.py
llm_api/interfaces/: llm_client_factory_interface.py  llm_client_interface.py  llm_interface.py
llm_api/interfaces/llm_interfaces/: llm_client_factory_interface.py  llm_client_interface.py
llm_api/interfaces/news_api_interfaces/: news_api_client_interface.py  news_api_service_interface.py  news_client_factory_interface.py
llm_api/services/: auto_complete_service.py  llm_service.py  news_api_service.py  rewrite_article_service.py
llm_api/services/llm_services/: create_article_service.py  llm_service.py  make_query_service.py  rewrite_article_service.py
llm_api/services/news_services/: the_news_api_service.py
llm_api/static/docs/: redoc.standalone.js
llm_api/tests/unit/: test_create_article.py  test_get_articles.py  test_health_check.py  test_search_articles.py
(+15 files in other folders)
